# LUCA-AI_369

./: .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  ADMIN_GUIDE.md  AUDIT_KRITIKER_BREAKING_EMPIRICAL_EVIDENCE.md  BUILD_ANDROID_APK.sh  CHANGELOG.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLEAR_CACHE.md  COMPLETE_APPS.md  COUNTER_AUDIT_RESPONSE.md  DEEPSEEK_INQUIRY_FINAL.md  DMT_FINGERPRINT_PERSONALIZATION.md  ELEVATOR_PITCH.md  FINAL_CHECKLIST.md  FIXES_APPLIED_FINAL.md  FIX_APPLIED.md  FRONTEND_MODERNIZATION_PLAN.md  FUNDAMENTAL_PRINCIPLES.md  GPU_ORCHESTRATION.md  HACCP_QUALITY_CHECKPOINTS.md  LAYERS_6_TO_9_PLAN.md  LAYER_10_COMPLETE.md  LAYER_10_DESIGN.md  LAYER_11_COMPLETE.md  LAYER_9_COMPLETE.md  LAYER_9_DESIGN.md  LUCA_369_370_FRAMEWORK.md  LUCA_370_INTEGRATION_SUMMARY.md  LUCA_370_README.md  LUCA_CHANGELOG_v2.1.md  LUCA_HYBRID_VISION.md  LUCA_LICENSE_v2.1.txt  MESHTASTIC_GUIDE.md  MESSAGE_TO_ORDER_AIS.md  MYSQL_MIGRATION_PLAN.md  OFFLINE_SETUP.md  (+46 more)
.claude/: luca-command.md
.claude/commands/: README.md  create-full-structure.md  integrate-verified-identity.md  reorganize-to-luca-folder.md  setup-luca-structure.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: luca_ci.yml
LUCA_T5_Efficient/: LUCA_T5_Efficient.ino  README.md  requirements.txt
apps/: MAKE_GOLD.md  deploy-all.sh
apps/docs/: DEPLOYMENT_GUIDE.md  QUICK_START.md
apps/mobile/: App.tsx  app.json  eas.json
apps/mobile-app/: .gitignore  README.md  babel.config.js  package.json
apps/t-deck/: .gitignore  README.md
apps/t-deck-app/: platformio.ini
apps/web-app/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts
archive/: ASCII_ART.txt  HGT_UPDATE_README.md  README_OLD.md  RELEASE_NOTES_3.7.0.md
archive/consciousness_modules/: religious_lineage.py  silicon_valley_integration.py
backend/: __init__.py  config.py  database.py  init_verified_identity.py  main.py  migrate_add_hgt.py  models.py  models_verified_identity.py
backend/benchmarks/: __init__.py  benchmark_runner.py  workload_generators.py
backend/consciousness/: __init__.py  ancient_technologies.py  ancient_technologies_backup.py  audit_breaker.py  audit_verifier.py  biosensor_ancient_bridge.py  causal_transformer.py  causal_transformer_modular.py  chaos_to_harmony.py  chaotic_creativity_workshops.py  chatgpt_provider.py  core.py  (+24 more)
contracts/: LUCADAO.sol
docs/: BIOLOGICAL_CODE_AUDIT.md  CAUSAL_CONSCIOUSNESS_OPTIMIZATION.md  CODE_QUALITY.md  COUNTER_AUDIT_RESPONSE.md  DEPLOYMENT.md  LUCA369_Dimension10_The_Communicator_arXiv.tex  LUCA_README_v2.1.md  MYCELIUM_HACCP_INTEGRATION.md  PROJECT_STATS.md  REDDIT_LAUNCH_POST.md  REDDIT_POST_REAL.md  SCIENTIFIC_VALIDATION_ADDENDUM.md  SETUP_COMPLETE.md  TECHNICAL_LINEAGE.md  layer_12_design.md
examples/: README.md  basic_usage.py  complete_luca_integration.py  enhanced_consciousness_demo.py  framework_369_370_demo.py  neurodiversity_comparison.py  workloads.json
frontend/: admin.html  chat.html  index.html  login.html  neurodiversity-dashboard.html
luca/: __init__.py  allocator.py  framework_369_370.py  layer_0_root_kernel.py  layer_10_ds_star_quantum_core.py  layer_12_evolutionary_consensus.py  luca_cli.py  luca_mesh_cli.py
luca_369_370/: LLM_INTEGRATION_SUMMARY.md  README.md  __init__.py  luca_cli.py  requirements.txt  setup_env.sh
tests/: __init__.py  conftest.py  test_allocator.py  test_consciousness_layer.py  test_design_generator.py  test_dimension10_communicator.py  test_ds_star_quantum.py  test_enhanced_consciousness.py  test_fairness_engine.py  test_growth_kinetics.py  test_haccp_checkpoint_1_imports.py  test_haccp_checkpoint_2_unit_functionality.py  test_haccp_checkpoint_3_integration.py  test_haccp_checkpoint_4_workflow.py  test_haccp_checkpoint_5_documentation.py  test_hardware_optimizer.py  test_info_blocks.py  test_kimi_integration.py  test_layer_0_root_kernel.py  test_layer_12_evolutionary_consensus.py  test_llm_integration.py  test_medical_emergency.py  test_meshtastic_integration.py  test_metabolic_pathways.py  test_ml_algorithms.py  test_multimodal_metabolism.py  test_neurodiversity_integration.py  test_new_engines.py  test_paper2web.py  test_population_dynamics.py  test_progressive_disclosure.py  test_quantum_synthesis.py  test_satellite_integration.py  test_scoby_orchestration.py
(+154 files in other folders)
